[gd_scene load_steps=4 format=3 uid="uid://cuh2x6gk3mlgn"]

[ext_resource type="Script" path="res://scripts/player/building_manager.gd" id="1_gdwe6"]
[ext_resource type="PackedScene" uid="uid://dbjlp23yoipod" path="res://scenes/block_building/placers/block_placer.tscn" id="2_r8cq1"]
[ext_resource type="PackedScene" uid="uid://d2ajujxfkdyex" path="res://scenes/block_building/placers/reinforced_block_placer.tscn" id="3_e20ug"]

[node name="BuildingManager" type="Node3D"]
script = ExtResource("1_gdwe6")

[node name="RightPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.2, -0.2)

[node name="BlockPlacer" parent="RightPosition" instance=ExtResource("2_r8cq1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.15)
is_being_pulled_out = false

[node name="ReinforcedBlockPlacer" parent="RightPosition" instance=ExtResource("3_e20ug")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.15)
is_being_pulled_out = false

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
